# MoH

./: .gitignore  LICENSE  README.md  main.py  moh.py  pyproject.toml
cfg/: config.yaml
cfg/llm_client/: local.yaml  openai.yaml
cfg/problem/: tsp_gls.yaml
problems/meta/: seed_algorithm.py  seed_algorithm_improved.py
problems/tsp_gls/: eval.py  gls.py  gpt.py  solution_tsp_gls-100.json  solution_tsp_gls-200.json
prompts/helper/: check_iter.txt
prompts/meta/: desc.txt
prompts/tsp_gls/: desc.txt  plan.txt  size.txt  task.txt
utils/: final_improver_algorithm.py  population.py  run_logger.py  utils.py
utils/llm_client/: base.py  openai.py
